# naja-yosys-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: FindYosys.cmake
example/adder/: Makefile
example/adder/src/: synth.ys
examples/vexriscv/: Makefile
examples/vexriscv/src/: synth.ys
src/: CMakeLists.txt  yosys_debug.cpp  yosys_debug.h  yosys_plugin.cpp
